# wolframalpha-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml
tests/: __init__.py  test_unit_conversion.py
wolframalpha_mcp_server/: __init__.py  server.py
